# twitter_clone

./: backup_file.dump
.github/workflows/: build.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  icons8-twitter-bird-32.ico:Zone.Identifier  layout.tsx  page.tsx  twitter.ico:Zone.Identifier
frontend/src/app/components/: CreatePost.tsx  Header.tsx  LeftSidebar.tsx  LogoutButton.tsx  ProfilePage.tsx  Sidebar.tsx  SidebarItem.tsx  Tweet.tsx  TweetFeed.tsx  UserItem.tsx  UserList.tsx  UserProfile.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
twitter_clone/: .dockerignore  .env  Dockerfile  README.md  backup.sql  pyproject.toml  requirements.txt
twitter_clone/tweets/migrations/: 0001_initial.py
twitter_clone/tweets/models/: tweets.py
twitter_clone/tweets/serializers/: __init__.py  tweets_serializer.py
twitter_clone/tweets/views/: tweets_viewset.py
twitter_clone/twitter_clone/: settings.py  urls.py  wsgi.py
twitter_clone/users/: urls.py
twitter_clone/users/migrations/: 0001_initial.py  0002_userprofile_avatar_url_alter_userprofile_user.py  0003_userprofile_followers.py  0004_userprofile_following_alter_userprofile_bio_and_more.py
twitter_clone/users/models/: __init__.py  users.py
twitter_clone/users/serializers/: __init__.py  register_serializer.py  users_serializer.py
twitter_clone/users/views/: __init__.py  users_viewset.py
